tests/toylang/neg/000279_mutation.toylang
program a = { else if a then sleep; } .
